# Anime-Recommender-System-LLMOPS

./: .dockerignore  .gitignore  Dockerfile  README.md  llmops-k8s.yaml  pyproject.toml  requirements.txt  setup.py  ~$p with kubernetes.docx  ~WRL0003.tmp
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  recommender.py  vector_store.py
